			SWI-Prolog ChangeLog
			====================

  * FIXED: thread_get_message/1 (deleted all messages from queue if
    the first was extracted).

  * ADDED: message_to_string/2 for translating message-terms to text.

VERSION 3.3.0 (release-12)
==========================

  * PORT: MT version: provided support for systems lacking recursive
    (UNIX98) mutexes, amoung with Solaris 2.5.  With patch received
    from Frank Cornelissen.  Thanks!

VERSION 3.3.0 (release-11)
==========================

  * INTERNAL: Got -DCOUNTING cpp option to work again for statistics
    on the virtual machine.

  * ADDED: PL_agc_hook() to register a hook into the atom garbage
    collector.

  * PERFORMANCE: Changed clause/2 to fully exploit clause-indexing.

  * PERFORMANCE: Changed interface of firstClause()/findClause() for
    somewhat faster indexing.

  * MODIFIED: Allow for abolish of static procedures, unless the iso
    prolog flag is set to true.

VERSION 3.3.0 (release-10)
==========================

  * FIXED: MT version: ensure calling thread_exit/1 gets the thread_at_exit
    handlers called.  Improved handling of halt/[0,1] by cancelling the other
    threads first (incomplete).

  * FIXED: open_null_stream/1 to register the stream open for writing
    (resulted in permission error).

  * FIXED: tracer to disable tail-recursion optimisation again (resulted
    in poorly readable trace output).

  * FIXED: clause/[2,3] not resetting predicate-reference properly.

  * PERFORMANCE: Exploit hashed first-argument indexing by retract/1.
    Schedule predicate clause collection to avoid quadratic behaviour
    of retract/1.

  * ADDED: code_type/2: type `xdigit' for hexadecimal digits.

  * ADDED: Support for deeply nested right-recursive terms to the
    compiler.  Limit (stack-overflow) spotted by Bob Wielinga.

VERSION 3.3.0 (release-9)
=========================

  * ADDED: option syntax_errors to read_term.  Modified read_clause to
    use syntax_errors(dec10).
